# Reconstruction

./: CMakeLists.txt  Reconstruct.cpp  Scene.ply
